--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "webpack-cli": "^3.3.8"
   },
   "dependencies": {
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4"
   }
 }
