--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/icons": "^4.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
