--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-beautiful-dnd": "^11.0.5",
@@ -30,6 +31,8 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-textarea-autosize": "^7.1.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
