--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-textarea-autosize": "^7.1.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
